# trino-playground

./: README.md  data_init.py  docker-compose.yml  pyproject.toml  trino_query_test.py
trino-conf/: config.properties
trino-conf/catalog/: mongodb.properties  postgresql.properties
