[project]
name = "trino-test"
version = "0.1.0"
description = ""
authors = [
    {name = "yugachang",email = "iamyugachang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "trino>=0.333.0,<0.334.0",
    "pandas>=2.2.3,<3.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "pymongo>=4.11.3,<5.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
